--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Tema2POO)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Tema2POO main.cpp Angajati.cpp Angajati.h Programator.cpp Programator.h Contabil.cpp Contabil.h FoodSupplier.cpp FoodSupplier.h Exceptii.cpp Exceptii.h)
+add_executable(Tema2POO main.cpp)
